objects/PC_SurveyInvitationRelatedObjects__c.object
<CustomObject>
    <description>This object would serve as a junction object to link Survey Invitation with different sobject records</description>
    <fields>
        <fullName>PC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field would be a lookup on Account record for which the Survey Invitation has ben created.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Invitation Related Objects</relationshipLabel>
        <relationshipName>Survey_Invitation_Related_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field would be a lookup on Case record for which the Survey Invitation has been created.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Invitations and Resulting Cases</relationshipLabel>
        <relationshipName>Survey_Invitation_Related_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_EngagementProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field would be a lookup on the Engagement Program record for which a survey has been created.</description>
        <label>Engagement Program</label>
        <referenceTo>PC_Engagement_Program__c</referenceTo>
        <relationshipLabel>Survey Invitation Related Objects</relationshipLabel>
        <relationshipName>Survey_Invitation_EngagementProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_ResultingCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field would be a lookup on the assistance case record which has been created as a result of configured survey.</description>
        <label>Resulting Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Invitations and Related Cases</relationshipLabel>
        <relationshipName>Survey_Invitation_Assistance_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SurveyCategory__c</fullName>
        <description>This field would be used to process flow in order to create PAP/Copay case on submitting any survey.</description>
        <label>Survey Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PC_PAP</fullName>
                    <label>PAP</label>
                </value>
                <value>
                    <fullName>PC_Copay</fullName>
                    <label>COPAY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_SurveyInvitation__c</fullName>
        <description>This field would be a lookup to the Survey Invitation record</description>
        <label>Survey Invitation</label>
        <referenceTo>SurveyInvitation</referenceTo>
        <relationshipLabel>Survey Invitation Related Objects</relationshipLabel>
        <relationshipName>Survey_Invitation_Related_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Invitation Related Objects</label>
    <nameField>
        <displayFormat>SIRO{0}</displayFormat>
        <label>Survey Invitation Related Objects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Invitation Related Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>